--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@auroratide/dice-tapper",
+  "name": "@auroratide/tap-to-roll",
   "version": "0.0.1",
   "description": "",
   "scripts": {
