--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tap to roll some dice, perfect for Dungeons and Dragons or any other roleplaying game.",
   "scripts": {
     "dev": "parcel -p 3000 src/index.html",
-    "build": "NODE_ENV=production parcel build src/index.html",
+    "build": "NODE_ENV=production parcel build --public-url '/tap-to-roll' src/index.html",
     "clean": "rm -rf dist",
     "test": "jest"
   },
