--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.2.1",
+    "@parcel/transformer-webmanifest": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^14.0.0-beta",
