--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@auroratide/tap-to-roll",
   "version": "0.1.0",
   "description": "Tap to roll some dice, perfect for Dungeons and Dragons or any other roleplaying game.",
+  "type": "module",
   "scripts": {
     "dev": "parcel -p 3000 src/index.html",
-    "build": "NODE_ENV=production parcel build src/index.html",
+    "build": "NODE_ENV=production parcel build --public-url '/tap-to-roll' src/index.html",
     "clean": "rm -rf dist",
     "test": "jest"
   },
@@ -14,10 +15,13 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@parcel/service-worker": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.2.1",
+    "@parcel/transformer-webmanifest": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^14.0.0-beta",
