--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "parcel -p 3000 src/index.html",
     "build": "NODE_ENV=production parcel build --public-url '/tap-to-roll' src/index.html",
+    "parchment:generate": "node ./parchment/generate-bg.js",
     "clean": "rm -rf dist",
     "test": "jest"
   },
@@ -30,6 +31,7 @@
     "@types/react-dom": "^17.0.11",
     "jest": "^27.4.7",
     "parcel": "^2.2.1",
+    "sharp": "^0.30.0",
     "ts-jest": "^27.1.3"
   }
 }
