--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "NODE_ENV=production parcel build --public-url '/tap-to-roll' src/index.html",
     "parchment:generate": "node ./parchment/generate-bg.js",
     "clean": "rm -rf dist",
+    "gh": "gh-pages -d dist",
+    "publish": "npm-run-all clean build test",
     "test": "jest"
   },
   "author": {
@@ -29,7 +31,9 @@
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "gh-pages": "^3.2.3",
     "jest": "^27.4.7",
+    "npm-run-all": "^4.1.5",
     "parcel": "^2.2.1",
     "sharp": "^0.30.0",
     "ts-jest": "^27.1.3"
